# saga-cpp

./: CHANGES  INSTALL  Makefile  PACKAGE  README  README.md  configure  configure.in  index.html
adaptors/: Makefile
adaptors/default/: Makefile
adaptors/default/advert/: INFO  Makefile  README  advert.cpp  advert.hpp  advert_async.cpp  advert_database.hpp  advert_database_connection.cpp  advert_database_connection.hpp  advert_database_connection_cache.hpp  advertdb.sql  advertdirectory.cpp  advertdirectory.hpp  advertdirectory_async.cpp  common_helpers.hpp  config.hpp  connectstring.hpp  context.cpp  context.hpp  default_advert_adaptor.cpp  default_advert_adaptor.hpp  default_advert_adaptor.ini.in
adaptors/default/context/: Makefile  default_context_adaptor.cpp  default_context_adaptor.hpp  default_context_adaptor.ini
adaptors/default/cpr/: Makefile  README  config.hpp  cpr_checkpoint.cpp  cpr_checkpoint.hpp  cpr_context.cpp  cpr_context.hpp  cpr_directory.cpp  cpr_directory.hpp  cpr_job.cpp  cpr_job.hpp  cpr_job_service.cpp  cpr_job_service.hpp  default_cpr_adaptor.cpp  default_cpr_adaptor.hpp  default_cpr_adaptor.ini
adaptors/default/file/: INFO  Makefile  default_dir.cpp  (+13 more)
adaptors/generator/: Makefile  saga-adaptor-generator.pl
config/: Makefile  README  boost.m4  saga.config.boost.c.mk.in  saga.config.c.mk.in  saga.config.check.c.mk.in  saga.config.openssl.c.mk.in  saga.config.postgresql.c.mk.in  saga.config.sh.in  saga.config.soci.c.mk.in  saga.config.sqlite3.c.mk.in  saga.config.xmlrpc.c.mk.in  saga.ini.in  saga.ini.static  saga.m4  saga.pc.in  saga_base.m4  saga_boost.m4  saga_boost.pc.in  saga_ldl.m4  saga_openssl.m4  saga_postgresql.m4  saga_soci.m4  saga_sqlite3.m4  saga_xmlrpc.m4  static_adaptor.list
css/: custom.css
css/fonts/: Tangerine_Bold-webfont.eot  Tangerine_Regular-webfont.eot  demo.html  stylesheet.css
docs/: Makefile
docs/apidocs/: Doxyfile  Doxyfile.in  Makefile  README  mainpage.h
docs/cpidocs/: Doxyfile.in  Makefile  README  mainpage.h
docs/manuals/: Makefile
docs/misc/: Notes  README  README.Win  README.cpp  coding_cpp.sh  coding_cpp.tex  engine.txt
examples/: Makefile  PACKAGE
examples/misc/: Makefile  README  advert.cpp  advert_dir_list.cpp  advert_get.cpp  advert_perf.sh  attribute_case.cpp  aws.cpp  aws_simple.cpp  aws_ssh.cpp  boost_process.cpp  callback.cpp  context.cpp  context_add_defaults.cpp  debug.cpp  dir.cpp  drmaa_mockup.cpp  enum.cpp  exception.cpp  exception_solved.cpp  file_read.cpp  job_benchmark.cpp  job_condor.cpp  job_description_clone.cpp  job_io.cpp  job_monitoring.cpp  job_overhead.cpp  job_path.cpp  job_service.cpp  job_service_async.cpp  job_simple.cpp  job_ssh.cpp  job_state.cpp  job_state_2.cpp  job_streams.cpp  job_test.cpp  job_test_interactive.cpp  local_file.cpp  misc.cpp  opencloudfile.cpp  (+31 more)
examples/programming_guide/: Makefile  README
examples/tutorial/: README  chaining_jobs.cpp  depending_jobs.cpp  exercise.cpp  hello_file_world.cpp  hello_job_world.cpp  hello_world.cpp  saga_tutorial_examples.tex
make/: Makefile  README.make  saga.adaptor.mk  saga.adaptor.util.mk  saga.application.mk  saga.compliance.mk  saga.config.default.mk  saga.config.mk  saga.delayed.mk  saga.dist.mk  saga.doc.mk  saga.error.mk  saga.external.mk  saga.mk  saga.mklite.mk  saga.nothing.mk  saga.package.mk  saga.test.mk  saga.util.mk  saga.warning.mk
make/misc/: Makefile  doc.adaptor.footer.tex  doc.adaptor.header.tex  saga_include.tex
project/VS.NET/: antlr.vsprops  c_bindings-lite.props  c_bindings-lite.vsprops  c_bindings.props  c_bindings.vsprops  openssl.props  openssl.vsprops  readline.props  readline.vsprops  saga-lite.props  saga-lite.sln  saga-lite.vsprops  saga.props  saga.sln  saga.vsprops  saga_adaptor-lite.props  saga_adaptor-lite.vsprops  saga_adaptor.props  saga_adaptor.vsprops  saga_application-lite.props  saga_application-lite.vsprops  saga_application.props  saga_application.vsprops  saga_nesc.sln  saga_package-lite.props  saga_package-lite.vsprops  saga_package.props  saga_package.vsprops  saga_version.props  saga_version.vsprops  saga_win32.vsprops  saga_win64.sln  saga_win64.vsprops  soci_core.props  soci_core.vsprops  soci_postgresql.props  soci_postgresql.vsprops  soci_sqlite3.props  soci_sqlite3.vsprops  u2nt.props  (+3 more)
project/XCode/: README.XCode  build_all.sh
saga/: Makefile  saga-config.hpp.in  saga-defaults.hpp  saga-defs.hpp  saga.hpp
saga/impl/: Makefile  advert.hpp  attribute.hpp  buffer.hpp  call.hpp  config.hpp  context.hpp  context_cpi.hpp  context_serialization.hpp  cpr.hpp  exception.cpp  exception.hpp  exception_list.cpp  exception_list.hpp  filesystem.hpp  isn.hpp  job.hpp  logging.cpp  metric.hpp  namespace.hpp  object.hpp  replica.hpp  rpc.hpp  runtime.cpp  runtime.hpp  sd.hpp  session.hpp  stream.hpp  task.hpp  url.hpp  url_cpi.hpp
saga/saga/: Makefile  advert.hpp  async.hpp  attribute.cpp  attribute.hpp  autolink.hpp  base.hpp  buffer.cpp  buffer.hpp  call.hpp  context.cpp  context.hpp  core.hpp  cpr.hpp  detail.hpp  error.hpp  exception.cpp  exception.hpp  export_definitions.hpp  filesystem.hpp  impl_base.hpp  isn.hpp  job.hpp  metric.cpp  metric.hpp  monitorable.cpp  monitorable.hpp  namespace.hpp  object.cpp  object.hpp  path_leaf.hpp  permissions.cpp  permissions.hpp  replica.hpp  rpc.hpp  sd.hpp  session.cpp  session.hpp  stream.hpp  task.cpp  (+12 more)
test/: Makefile
test/cpp/: Makefile
tools/: Makefile
tools/clutils/: Makefile
tools/scripts/: Makefile  saga-config.in  saga-install.pl.in  saga-install.sh.in  saga-mkbindist.pl  saga-mksrcdist.pl  saga-profile.sh.in  saga-run-test.sh.in  saga-run.sh.in
tools/shell/: DEMO  Makefile  README  add_proxy.cpp  cat.cpp  cd.cpp  cp.cpp  echo.cpp  env.cpp  exec.cpp  getenv.cpp  help.cpp  history.cpp  init.cpp  joblist.cpp  joblist.hpp  kill.cpp  ln.cpp  ls.cpp  main.cpp  mkdir.cpp  mv.cpp  proxy_data.hpp  ps.cpp  pwd.cpp  remove_proxy.cpp  rep_add.cpp  rep_find.cpp  rep_list.cpp  rep_remove.cpp  rep_replicate.cpp  rep_update.cpp  resume.cpp  rm.cpp  rmdir.cpp  run.cpp  run2.cpp  saga-shell.cpp  saga-shell.hpp  setenv.cpp  (+6 more)
(+1563 files in other folders)
